# gg-open-core

./: .gitignore  README.md  environment.yml  pyproject.toml
data/Unreal/CoordinateSystem/: BP_CoordinateSystem.uasset  MI_Blue.uasset  MI_Green.uasset  MI_Red.uasset  M_BasicColor.uasset  README.md  SM_Cone.uasset  SM_Cylinder.uasset  SM_Sphere.uasset
docs/: plan.md
examples/space_graph/: ex_overview.py  ex_timing.py
gigagoop/: math.py
gigagoop/camera/: __init__.py  pinhole_camera.py
gigagoop/coord/: __init__.py  transform.py
gigagoop/coord/tests/: test_cframes.py  test_transform.py
gigagoop/types/: __init__.py  types.py
gigagoop/typing/: __init__.py
gigagoop/viz/: __init__.py  color.py
gigagoop/viz/space_graph/: README.md  __init__.py  camera.py  engine.py  mesh.py  params.py  space_graph.py
gigagoop/viz/space_graph/engine/: __init__.py  base_engine.py  server_engine.py
gigagoop/viz/space_graph/engine/utils/: gl_debug.py  (+1 more)
gigagoop/viz/space_graph/nodes/: __init__.py  arrow.py  camera.py  cframe.py  cylinder.py  depth_mesh.py  grid.py  image.py  legacy_cframe.py  lit_mesh.py  material_mesh.py  mesh.py  node.py  plot.py  scatter.py  sized_scatter.py  sphere.py  text.py  text3d.py  unreal_mesh.py
gigagoop/viz/space_graph/primitives/: builder.py
gigagoop/viz/space_graph/shaders/: depth_mesh.frag  depth_mesh.vert  grid.frag  grid.vert  image.frag  lines.frag  lines.vert  lit_mesh.frag  lit_mesh.vert  material_mesh.frag  material_mesh.vert  mesh.frag  mesh.vert  points.frag  points.vert  text3d.frag  text3d.vert  unreal_mesh.frag  unreal_mesh.vert
