[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gg-open-core"
version = "0.2.1"
description = "Open-source subset of gg-core tools."
license = {file = "LICENSE.txt"}
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "scikit-image",
  "pyzmq",
  "opencv-python-headless",
  "pywavefront",
  "imgui",
  "moderngl",
  "moderngl-window",
  "PyQt5",
]

[tool.setuptools.packages.find]
include = ["gigagoop*"]

[tool.setuptools.package-data]
gigagoop = ["**/*.vert", "**/*.frag", "**/*.obj"]
